# pybencher

./: .gitignore  LICENSE  Makefile  README.md  benchmark.py  examples.py  pyproject.toml  test_benchmark.py
.github/skills/generate_release_notes/: SKILL.md
.github/skills/generate_release_notes/assets/: default_template.md
.github/skills/generate_release_notes/references/: pattern_analysis.md
.github/workflows/: ci.yml  pipeline.yml  publish.yml
src/: pybencher.py
src/pybencher/: __init__.py  core.py
src/pybencher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_features.py  test_init.py  test_suite.py
versions/: pybencher-0.0.4-py3-none-any.whl  pybencher-0.0.5-py3-none-any.whl  pybencher-1.0.5-py3-none-any.whl  pybencher-1.0.6-py3-none-any.whl
