[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybencher"
version = "0.0.1"
authors = [
  { name="Barnaby Gill", email="barnabasgill@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BarnabasG/pybencher"
Issues = "https://github.com/BarnabasG/pybencher/issues"